--- a/webdeva2/style.css
+++ b/webdeva2/style.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #000000; /* Set the entire page background to black */
-    color: white; /* Ensure the text color is readable on a black background */
+    background-color: #000000; 
+    color: white; 
     overflow-x: hidden; /* Prevent horizontal overflow */
 }
 
@@ -37,7 +37,7 @@ body {
 
 header {
     text-align: center;
-    background-image: url('img/Background.jpg'); /* High-resolution image */
+    background-image: url('img/Background.jpg');
     background-size: cover;
     background-position: center;
     height: 50vh; /* Adjusted viewport height */
@@ -58,6 +58,15 @@ header h1 {
     margin: 0;
     font-size: 3em;
 }
+
+.qr-code {
+    width: 100px; /* Adjust the width as needed */
+    height: auto; /* Maintain the aspect ratio */
+    margin-left: 20px; /* Space between the heading and the QR code */
+    display: inline-block;
+    vertical-align: middle;
+}
+
 
 nav ul {
     list-style: none;
@@ -179,21 +188,21 @@ nav ul li a {
 }
 
 .content-section, .new-content-section {
-    margin-top: 20px; /* Add margin to separate content from button */
+    margin-top: 20px; 
     margin-bottom: 20px; 
-    padding: 20px; /* Adjust padding */
-    background-color: rgb(0, 0, 0); /* Black background for content sections */
-    color: rgb(255, 255, 255); /* Ensure the text color is readable on a black background */
+    padding: 20px; 
+    background-color: rgb(0, 0, 0); 
+    color: rgb(255, 255, 255); 
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    display: none; /* Hide all sections by default */
-    width: 100%; /* Make it flexible */
-    max-width: 1200px; /* Set a maximum width */
-    opacity: 0; /* Initial opacity for transition */
+    display: none; 
+    width: 100%; 
+    max-width: 1200px; 
+    opacity: 0; 
     transition: opacity 0.5s ease-in-out; /* Transition effect */
     margin: 0 auto; /* Center the content */
-    text-align: center; /* Align text to the center */
-    box-sizing: border-box; /* Ensure padding and border are included in the width */
+    text-align: center; 
+    box-sizing: border-box;
     border: 3px solid white; /* Add a white border */
 }
 
